Rolls back embedded font change which isn't working out in IE. Truncates long user first names properly. [Fixes #88]

--- a/css/usajobs-design-system-components.css
+++ b/css/usajobs-design-system-components.css
@@ -10022,6 +10022,8 @@ html {
   .usajobs-nav__first_name {
     display: inherit;
     max-width: 14rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
